# small-c-projects

./: .gitignore  CMakeLists.txt  README.md
projects/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/: CMakeLists.txt
projects/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/src/: balanced_parentheses.c  balanced_parentheses.h  main.c
projects/cyber_dojo/count_coins/count_coins_take_01/: CMakeLists.txt
projects/cyber_dojo/count_coins/count_coins_take_01/src/: count_coins.c  count_coins.h  main.c
projects/cyber_dojo/filename_range/filename_range_take_01/: CMakeLists.txt
projects/cyber_dojo/filename_range/filename_range_take_01/src/: filename_range.c  filename_range.h  main.c
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/: CMakeLists.txt
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/: fizzbuzz.c  fizzbuzz.h  main.c
projects/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/utils/: utils.c
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/: CMakeLists.txt
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/: fizzbuzz_plus.c  fizzbuzz_plus.h  main.c
projects/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/utils/: utils.h
projects/cyber_dojo/game_of_life/game_of_life_take_01/: CMakeLists.txt
projects/cyber_dojo/game_of_life/game_of_life_take_01/src/: game_of_life.c  game_of_life.h  main.c
projects/cyber_dojo/isbn/isbn_take_01/: CMakeLists.txt
projects/cyber_dojo/isbn/isbn_take_01/src/: isbn.c  isbn.h  main.c
projects/cyber_dojo/lcd_digits/lcd_digits_take_01/: CMakeLists.txt
projects/cyber_dojo/lcd_digits/lcd_digits_take_01/src/: lcd_digit_cell.c  lcd_digit_cell.h  lcd_digits.c  lcd_digits.h  main.c
projects/cyber_dojo/leap_year/leap_year_take_01/: CMakeLists.txt
projects/cyber_dojo/leap_year/leap_year_take_01/src/: leap_year.c  leap_year.h  main.c
projects/cyber_dojo/mine_field/mine_field_take_01/: CMakeLists.txt
projects/cyber_dojo/mine_field/mine_field_take_01/src/: main.c  mine_field.c  mine_field.h
projects/cyber_dojo/print_diamond/print_diamond_take_01/: CMakeLists.txt
projects/cyber_dojo/print_diamond/print_diamond_take_01/src/: main.c  print_diamond.c  print_diamond.h
projects/cyber_dojo/reverse_roman/reverse_roman_take_01/: CMakeLists.txt
projects/cyber_dojo/reverse_roman/reverse_roman_take_01/src/: main.c  reverse_roman.c  reverse_roman.h
projects/cyber_dojo/roman_numerals/roman_numerals_take_01/: CMakeLists.txt
projects/cyber_dojo/roman_numerals/roman_numerals_take_01/src/: main.c  roman_numerals.c  roman_numerals.h
projects/various/ex_01_array_init/: ex_01_array_init.c
projects/various/ex_01_reverse_array/: ex_01_reverse_array.c
projects/various/ex_02_reverse_string/: ex_02_reverse_string.c
projects/various/hello_world_2/: hello_world_2.c
projects/various/roman_numerals_full/roman_numerals_full_take_01/: CMakeLists.txt
projects/various/roman_numerals_full/roman_numerals_full_take_01/src/: main.c  roman_numerals_full.c  roman_numerals_full.h
tests/unit/: CMakeLists.txt
tests/unit/cyber_dojo/balanced_parentheses/balanced_parentheses_take_01/src/: test_balanced_parentheses.cpp
tests/unit/cyber_dojo/count_coins/count_coins_take_01/src/: test_count_coins.cpp
tests/unit/cyber_dojo/filename_range/filename_range_take_01/src/: test_filename_range.cpp
tests/unit/cyber_dojo/fizzbuzz/fizzbuzz_take_01/src/: test_fizzbuzz.cpp
tests/unit/cyber_dojo/fizzbuzz_plus/fizzbuzz_plus_take_01/src/: test_fizzbuzz_plus.cpp
tests/unit/cyber_dojo/game_of_life/game_of_life_take_01/src/: test_game_of_life.cpp
tests/unit/cyber_dojo/isbn/isbn_take_01/src/: test_isbn.cpp
tests/unit/cyber_dojo/lcd_digits/lcd_digits_take_01/src/: test_lcd_digits.cpp
tests/unit/cyber_dojo/leap_year/leap_year_take_01/src/: test_leap_year.cpp
tests/unit/cyber_dojo/mine_field/mine_field_take_01/src/: test_mine_field.cpp
tests/unit/cyber_dojo/print_diamond/print_diamond_take_01/src/: test_print_diamond.cpp
tests/unit/cyber_dojo/reverse_roman/reverse_roman_take_01/src/: test_reverse_roman.cpp
tests/unit/cyber_dojo/roman_numerals/roman_numerals_take_01/src/: test_roman_numerals.cpp
tests/unit/various/roman_numerals_full/roman_numerals_full_take_01/src/: test_roman_numerals_full.cpp
